<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.juliechea.tipcalculator.MainActivity">

    <TextView
        android:id="@+id/tipText"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginBottom="@dimen/tipText_marginBottom"
        android:layout_marginEnd="52dp"
        android:text="@string/Tip"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/totalPerPersonText"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/totalPerPersonText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="132dp"
        android:layout_marginEnd="48dp"
        android:text="@string/Total_per_person"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/totalText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="28dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/Total_Text_hint"
        app:layout_constraintBottom_toTopOf="@+id/resetButton"
        app:layout_constraintEnd_toStartOf="@+id/tipText"
        app:layout_constraintHorizontal_bias="0.428"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/customInput"
        android:layout_width="135dp"
        android:layout_height="51dp"
        android:layout_marginTop="188dp"
        android:inputType="number"
        android:text=" "
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/numPeopleInput" />

    <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="241dp"
        android:layout_height="515dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <RadioButton
            android:id="@+id/tenPercentTip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="176dp"
            android:onClick="onRadioButtonClicked"
            android:text="@string/ten_percent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <RadioButton
            android:id="@+id/fifteenPercentTip"
            android:layout_width="95dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/radio_margin"
            android:layout_marginStart="@dimen/radio_margin"
            android:layout_marginTop="@dimen/radio_margin"
            android:onClick="onRadioButtonClicked"
            android:text="@string/fifteen_percent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tenPercentTip" />


        <RadioButton
            android:id="@+id/twentyPercentTip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/radio_margin"
            android:layout_marginStart="@dimen/radio_margin"
            android:layout_marginTop="@dimen/radio_margin"
            android:onClick="onRadioButtonClicked"
            android:text="@string/twenty_percent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fifteenPercentTip" />

        <RadioButton
            android:id="@+id/customTip"
            android:layout_width="91dp"
            android:layout_height="35dp"
            android:layout_marginBottom="176dp"
            android:layout_marginEnd="@dimen/radio_margin"
            android:layout_marginStart="@dimen/radio_margin"
            android:layout_marginTop="@dimen/radio_margin"
            android:onClick="onRadioButtonClicked"
            android:text="@string/CustomTip_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/twentyPercentTip"
            app:layout_constraintVertical_bias="0.0" />
    </RadioGroup>


    <Button
        android:id="@+id/resetButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="52dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/Reset_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/calcButton"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/calcButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="44dp"
        android:text="@string/Calc_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/totalText"
        app:layout_constraintVertical_bias="0.38" />

    <EditText
        android:id="@+id/numPeopleInput"
        android:layout_width="136dp"
        android:layout_height="41dp"
        android:layout_marginTop="64dp"
        android:ems="10"
        android:hint="@string/num_People_Hint"
        android:inputType="number"
        android:textSize="8sp"
        app:layout_constraintStart_toEndOf="@+id/totalBill"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/totalBill"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:ems="10"
        android:hint="@string/total_bill_hint"
        android:inputType="numberDecimal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>
